--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,8 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>base_project</name>
-	<description>基础项目</description>
+	<name>liveroom_service</name>
+	<description>直播服务</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
